<resources>
  <string name="app_name">仿原生苹果日历</string>
  <string name="Sunday">周日</string>
  <string name="Monday">周一</string>
  <string name="Tuesday">周二</string>
  <string name="Wednesday">周三</string>
  <string name="Thursday">周四</string>
  <string name="Friday">周五</string>
  <string name="Saturday">周六</string>

  <array name="Array_month">
    <item>January</item>
    <item>February</item>
    <item>March</item>
    <item>April</item>
    <item>May</item>
    <item>June</item>
    <item>July</item>
    <item>August</item>
    <item>September</item>
    <item>October</item>
    <item>November</item>
    <item>December</item>
  </array>

</resources>
