<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:weightSum="7"
      >

    <TextView
        android:text="@string/Sunday"
        style="@style/WeeklyAbbreviationStyle"
        />

    <TextView
        android:text="@string/Monday"
        style="@style/WeeklyAbbreviationStyle"
        />

    <TextView
        android:text="@string/Tuesday"
        style="@style/WeeklyAbbreviationStyle"
        />

    <TextView
        android:text="@string/Wednesday"
        style="@style/WeeklyAbbreviationStyle"
        />

    <TextView
        android:text="@string/Thursday"
        style="@style/WeeklyAbbreviationStyle"
        />

    <TextView
        android:text="@string/Friday"
        style="@style/WeeklyAbbreviationStyle"
        />

    <TextView
        android:text="@string/Saturday"
        style="@style/WeeklyAbbreviationStyle"
        />

  </LinearLayout>

  <ViewFlipper
      android:id="@+id/mViewFlipper"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      />
</LinearLayout>